--- a/appenprivacy.html
+++ b/appenprivacy.html
@@ -54,5 +54,7 @@
 <p class="p2"><br></p>
 <p class="p1">Terms update</p>
 <p class="p1">When you continue to use our products or services, you agree to the terms in effect at the time.</p>
+<p class="p1">If you have any questions, please contact us:2265398506@qq.com</p>
+
 </body>
 </html>
