--- a/appenreement.html
+++ b/appenreement.html
@@ -258,5 +258,7 @@
 <p class="p1">12. We have the final right to interpret the terms of service of this agreement</p>
 <p class="p2"><br></p>
 <p class="p1">Your comments and suggestions on any part of the service or any part of these terms of service can be contacted through the customer service department.</p>
+<p class="p1">If you have any questions, please contact us:2265398506@qq.com</p>
+
 </body>
 </html>
